--- a/_posts/2018-12-16-algorithm-1.md
+++ b/_posts/2018-12-16-algorithm-1.md
@@ -1,7 +1,7 @@
 ---
-title: "Algorithm(1) - Asymptotic Analysis"
+title: "Data Structure and Algorithm(1) - Asymptotic Analysis"
 categories:
-  - algorithm
+  - data structure and algorithm
 tags:
   - algorithm
 ---
