--- a/_posts/2019-01-07-통찰.md
+++ b/_posts/2019-01-07-통찰.md
@@ -16,7 +16,7 @@ tags:
 
 <br/>
 
-최재천 교수님의 글에는 생명을 따스하게 바라보는 시선이 담겨 있다. 생명을 공부하는 사람이라면 생명을 바라보는 자신만의 눈을 길러야 하는 것이 아닐까. 우연이 만난 책 덕분에 생명 공부를 시작하기 전에 필요한 고민을 할 수 있었다.
+최재천 교수님의 글에는 생명을 따스하게 바라보는 시선이 담겨 있다. 생명을 공부하는 사람이라면 생명을 바라보는 자신만의 눈을 길러야 하는 것이 아닐까. 우연히 만난 책 덕분에 생명 공부를 시작하기 전에 필요한 고민을 시작할 수 있었다.
 
 >  '나는 왜 생물을 공부하려 하는가?' '나는 대학원에 왜 가려고 하는가?' ''나는 생물을 공부하면서 어떤 마음 가짐을 가져야 하는가?' 
 
@@ -47,4 +47,3 @@ tags:
 <br/>
 
 몇년 전 내가 우리 사회에 화두로 던진 통섭은 내겐 어쩌면 운명처럼 다가설 수 밖에 없는 삶의 과녁이었는지 모른다. 생물학자가 되어 산지 어언 30년이 넘었지만, 예기치 찮은 곳에서 낯선 익숙함을 만나는 희열은 여전히 내 삶을 흥분시킨다. 지난 몇 년간 조선일보의 내 개인칼럼 '최재천의 자연과 문화'에 쓴 짧은 글들을 한데 모았다. 함께 뒤돌아보고, 건너다보고, 뒤집어보았으면 좋겠다. 그러다 보면 어느 날 '아하'하며 우리 모두 벌거벗은 채 목욕탕을 뛰쳐나가게 될 지 모른다. 그 통찰의 순간에는 모두 함께였으면 좋겠다.
-
