--- a/_posts/2019-01-06-게놈혁명.md
+++ b/_posts/2019-01-06-게놈혁명.md
@@ -8,7 +8,7 @@ tags:
   - review
 ---
 
-[게놈 혁명](https://book.naver.com/bookdb/book_detail.nhn?bid=13483690)
+[이민섭, 게놈 혁명](https://book.naver.com/bookdb/book_detail.nhn?bid=13483690)
 
 <br/>
 
