--- a/_posts/2019-01-07-통찰.md
+++ b/_posts/2019-01-07-통찰.md
@@ -8,7 +8,7 @@ tags:
   - review
 ---
 
-[통찰](https://book.naver.com/bookdb/book_detail.nhn?bid=7039803)
+[최재천, 통찰](https://book.naver.com/bookdb/book_detail.nhn?bid=7039803) 
 
 <br/>
 
