--- a/_posts/2019-01-07-통찰.md
+++ b/_posts/2019-01-07-통찰.md
@@ -12,15 +12,13 @@ tags:
 
 <br/>
 
-![](/assets/images/biology/insight.png)
+![](/assets/images/book/insight.png)
 
 <br/>
 
-최재천 교수님의 글에는 생명을 따스하게 바라보는 시선이 담겨 있다. 생명을 공부하는 사람이라면 생명을 바라보는 자신만의 눈을 길러야 하는 것이 아닐까. 우연히 만난 책 덕분에 생명 공부를 시작하기 전에 필요한 고민을 시작할 수 있었다.
+최재천 교수님의 글에는 생명을 따스하게 바라보는 시선이 담겨 있다. 생명을 공부하는 사람이라면 생명을 바라보는 자신만의 눈을 길러야 하는 것이 아닐까. 우연히 만난 책 덕분에 생명을 공부하기로 결심하기 전에 필요한 고민을 시작할 수 있었다.
 
 >  '나는 왜 생물을 공부하려 하는가?' '나는 대학원에 왜 가려고 하는가?' ''나는 생물을 공부하면서 어떤 마음 가짐을 가져야 하는가?' 
-
-책의 여는 글이 여운이 남는다. 특히 최재천 교수님이 대학원에 지원서에 쓴 글은 본받고 싶을 정도다.
 
 <br/>
 
