--- a/_posts/2019-01-15-calculus-정리-3.md
+++ b/_posts/2019-01-15-calculus-정리-3.md
@@ -1,10 +1,10 @@
 ---
 title: 미적분학 정리(3) - Integral
 categories:
-  - math
+  - calculus
 tags:
   - calculus
-
+  - math
 ---
 
 수학을 처음부터 다시 공부하고 있습니다. 개념만 보고 넘어가는 것이 아니라 고등학교 때처럼 하나씩 손으로 문제를 직접 풀어보면서 체득하고 있습니다. 우선 미적분학부터 공부하고 있습니다. University of Pennsylvania의 [Coursera 강의](https://www.coursera.org/learn/single-variable-calculus/)를 기본으로 하고 서울대학교 김홍종 교수님의 미적분학을 참고로 보고 있습니다. 오늘은 마지막으로 적분에 대해서 정리해보겠습니다.
@@ -108,6 +108,7 @@ Lecture 18 - 20은 미분 방정식에 관련한 내용으로 생략했습니다
 ## Lecture 26. The fundamental of integral calculus
 
 - 정적분과 부정적분의 관계(중요한 것은 $[a,b]$에서 함수 $f$ 가 연속일 때 다음이 성립한다.)
+
   - $ \int_{a}^{b} f(x)dx = [\int f(x)]^b_a$
 
 - 이는 미적분학의 기본정리 중의 2번째이다. [위키피디아](https://ko.wikipedia.org/wiki/%EB%AF%B8%EC%A0%81%EB%B6%84%ED%95%99%EC%9D%98_%EA%B8%B0%EB%B3%B8%EC%A0%95%EB%A6%AC)에 따르면 다음과 같다.
