--- a/_posts/2019-01-15-calculus-정리-2.md
+++ b/_posts/2019-01-15-calculus-정리-2.md
@@ -1,9 +1,10 @@
 ---
 title: 미적분학 정리(2) - Differential
 categories:
-  - math
+  - calculus
 tags:
   - calculus
+  - math
 ---
 
 수학을 처음부터 다시 공부하고 있습니다. 개념만 보고 넘어가는 것이 아니라 고등학교 때처럼 하나씩 손으로 문제를 직접 풀어보면서 체득하고 있습니다. 우선 미적분학부터 공부하고 있습니다. University of Pennsylvania의 [Coursera 강의](https://www.coursera.org/learn/single-variable-calculus/)를 기본으로 하고 서울대학교 김홍종 교수님의 미적분학을 참고로 보고 있습니다. 오늘은 두 번째로 미분에 대해서 정리해보겠습니다.
