--- a/_posts/2019-02-24-현명한-초보-투자자-1.md
+++ b/_posts/2019-02-24-현명한-초보-투자자-1.md
@@ -8,6 +8,12 @@ tags:
 
 ---
 
+[야마구치 요헤이, 현명한 초보 투자자](https://book.naver.com/bookdb/book_detail.nhn?bid=10503885)
+
+<br/>
+
+아래 내용은 현명한 초보 투자자의 내용을 정리한 것입니다.
+
 <br/>
 
 ### 1. 주식 투자의 원칙(p28)
@@ -205,5 +211,4 @@ tags:
 - 매월 최소한 수입의 10%를 증권계자에 불입하자.
 - 겸허히 배우는 자세를 간직한다.
 
-
-
+<br/>
