--- a/_posts/2019-02-24-주식투자-무작정-따라하기.md
+++ b/_posts/2019-02-24-주식투자-무작정-따라하기.md
@@ -5,10 +5,9 @@ categories:
 tags:
   - investment
   - book
-
 ---
 
-[윤재수, 주식 투자 무작정 딸하기](https://book.naver.com/bookdb/book_detail.nhn?bid=11481151)
+[윤재수, 주식 투자 무작정 따라하기](https://book.naver.com/bookdb/book_detail.nhn?bid=11481151)
 
 <br/>
 
@@ -18,7 +17,7 @@ tags:
 
 <br/>
 
-### 제1계명. 주식투자로 손해를 볼 수 있다는 점을 먼저 인정하라!
+## 제1계명. 주식투자로 손해를 볼 수 있다는 점을 먼저 인정하라!
 
 주식투자로 누구나 매번 돈을 벌 수 있다면 은행에 예금을 하는 사람은 아무도 없을 것입니다. 이것은 펀드투자도 마찬가지입니다. 주식투자에 처음 입문하는 분이라면, 주식투자로 높은 수익을 얻을 수도 있지만 손실을 볼 위험도 있다는 것을 알고 있어야 합니다. 따라서 손실에 대한 대책을 강구해 둘 필요가 있습니다. 그 대책으로는, 첫째 자신이 허용할 수 있는 손실의 범위를 생각해 두는 것입니다. 생계의 기초가 되는 전재산을 투자한다든가 어떠한 일이 있어도 손실을 보아서는 안 되는 자금으로 주식투자를 해서는 안 됩니다.
 
@@ -28,13 +27,13 @@ tags:
 
 <br/>
 
-### 제2계명. 목표수익률을 낮춰라!
+## 제2계명. 목표수익률을 낮춰라!
 
 연간 목표 수익률을 100% 이상 잡고 있습니까? 그렇다면 투자를 그만두는 것이 좋습니다. 물론 투자를 하다 보면 100% 이상 수익이 날 수도 있습니다. 그러나 처음부터 수익률 목표를 무리하게 높게 잡으면 작전주나 부실주에 손을 대는 등 종목선정에서 매매시점까지 투자원칙을 일관되게 지키지 못하게 됩니다.
 
 <br/>
 
-### 제 3계명. 하루 종일 컴퓨터 앞에 앉아 있지 마라!
+## 제 3계명. 하루 종일 컴퓨터 앞에 앉아 있지 마라!
 
 이 계명은 아주 쉬울 것 같지만 막상 주식투자를 시작하면 실천하기 어려울 것입니다. 주식투자는 상대가 있는 게임입니다. 내 마음이 급하다고 해도 상대방은 내 마음과 같이 움직여주지 않습니다. 강태공이 곧은 낚시 바늘로 시간을 낚았듯이 마음이 느긋하고 평온해야 시장이 보입니다.
 
@@ -44,7 +43,7 @@ tags:
 
 <br/>
 
-### 제 4계명. 계좌 잔고의 금액이 항상 초기 투자 금액이다.
+## 제 4계명. 계좌 잔고의 금액이 항상 초기 투자 금액이다.
 
 만약 2백만원으로 투자를 시작했는데 투자손실이 많아 1백만원밖에 남지 않았다면 1백만원을 초기 투자금액이라 생각하십시오. 2백만원을 기억하고 있는 한 여러분은 올바른 투자판단을 할 수가 없습니다.
 
@@ -52,7 +51,7 @@ tags:
 
 <br/>
 
-### 제 5계명 계좌를 관리하라!
+## 제 5계명 계좌를 관리하라!
 
 은행의 일반적인 예금계좌는 잔고와 이자율 정도만 확인해 두면 됩니다. 그러나 증권계좌는 자산가치가 시시각각 변동하기 때문에 주식투자를 하는 사람은 자기 계좌를 수시로 관리해야 합니다. 주식투자는 계좌관리로부터 시작된다고 할 수 있습니다. 그럼 계좌관리를 하는 요령을 알아볼까요?
 
